# aims_sim_gazebo

./: README.md
ackermann_vehicle/ackermann_vehicle_description/launch/: ackermann_vehicle.launch  ackermann_vehicle_rviz.launch  rviz.launch
ackermann_vehicle/ackermann_vehicle_description/urdf/: em_3905.urdf.xacro
ackermann_vehicle/ackermann_vehicle_gazebo/launch/: ackermann_vehicle.launch  aims.launch  astar.launch
ackermann_vehicle/ackermann_vehicle_gazebo/rviz/: car1.rviz
ackermann_vehicle/ackermann_vehicle_gazebo/scripts/: ackermann_controller  astar.py  astar_vehicle.py  move_astar_test.py  move_vehicle.py  move_vehicles_test.py  open_loop.py  pure_pursuit.py  transform_broadcaster.py  transform_broadcaster_pose.py  utils.py
ackermann_vehicle/ackermann_vehicle_gazebo/worlds/: intersection.world
models/: copy_model.sh
models/intersection/: model.config  model.sdf
models/intersection/materials/scripts/: floor.material
twist_to_ackermann/: CMakeLists.txt
twist_to_ackermann/src/: twist_to_ackermann.cpp
